We can do it :)

--- a/ACM_TIMUS/ACM_TIMUS.vcxproj
+++ b/ACM_TIMUS/ACM_TIMUS.vcxproj
@@ -78,6 +78,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Base Algorithms\JustAlgo.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
