--- a/ACM_TIMUS/ACM_TIMUS.vcxproj
+++ b/ACM_TIMUS/ACM_TIMUS.vcxproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <ClCompile Include="Base Algorithms\JustAlgo.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Solutions\1602.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
