--- a/ACM_TIMUS/ACM_TIMUS.vcxproj.filters
+++ b/ACM_TIMUS/ACM_TIMUS.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Base Algorithms\JustAlgo.cpp">
       <Filter>Algorithms</Filter>
     </ClCompile>
+    <ClCompile Include="Solutions\1602.cpp">
+      <Filter>Algorithms</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
